# sentiamo

./: .gitignore  README.md  pyproject.toml  sentiamo.py  sentiamo_cross.py  sentiamo_deep.py
lyrics/: Arisa - Magica Favola.txt  Bambole Di Pezza - Resta Con Me.txt  Dargen DAmico - Ai Ai.txt  Ditonellapiaga - Che Fastidio.txt  Eddie Brock - Avvoltoi.txt  Elettra Lamborghini - Voilà.txt  Enrico Nigiotti - Ogni Volta Che Non So Volare.txt  Ermal Meta - Stella Stellina.txt  Fedez & Marco Masini - Male Necessario.txt  Francesco Renga - Il Meglio Di Me.txt  Fulminacci - Stupida Sfortuna.txt  J-AX - Italia Starter Pack.txt  LDA & Aka 7even - Poesie Clandestine.txt  Leo Gassmann - Naturale.txt  Levante - Sei Tu.txt  Luchè - Labirinto.txt  Malika Ayane - Animali Notturni.txt  Mara Sattei - Le Cose Che Non Sai Di Me.txt  Maria Antonietta & Colombre - La Felicità E Basta.txt  Michele Bravi - Prima O Poi.txt  Nayt - Prima Che.txt  Patty Pravo - Opera.txt  RAF - Ora E Per Sempre.txt  Sal Da Vinci - Per Sempre Sì.txt  Samurai Jay - Ossessione.txt  SayF - Tu Mi Piaci Tanto.txt  Serena Brancale - Qui Con Me.txt  Tommaso Paradiso - I Romantici.txt  Tredici Pietro - Uomo Che Cade.txt  chiello - Ti Penso Sempre.txt
output/: analisi_incrociata.md  cross_report.txt  deep_features.json  deep_report.txt  features.json  report.txt
