[project]
name = "sentiamo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "demucs>=4.0.1",
    "librosa>=0.11.0",
    "lyricsgenius>=3.7.6",
    "matplotlib>=3.10.8",
    "mutagen>=1.47.0",
    "numpy>=2.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
]
